# kroki_generator

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_EXAMPLES.md  CLAUDE.md  Dockerfile  Makefile  PLANNING.md  PRD.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: M3_task_completion.md  M4_extensions_diagrammes_completion.md  ci_cd_fixes_session.md  clear_behavior_completion.md  development_patterns.md  docker_ci_troubleshooting.md  dockerhub_integration.md  excalidraw_bug_fix_session.md  excalidraw_fix_completion.md  kroki_flask_architecture.md  kroki_flask_learnings.md  m3_quality_progress.md  m4_ux_improvements_completion.md  milestone_M0_completion.md  milestone_M1_completion.md  milestone_M2_completion.md  pb_excalidraw_fix_session.md  project_architecture.md  project_current_state.md  project_documentation_patterns.md  project_quality_standards.md  session_M3_kroki_flask_generator.md  session_checkpoint_excalidraw.md  session_checkpoint_pb_excalidraw.md  session_completion_summary.md  session_create_graph_project_setup.md  session_dark_mode_and_bug_fixes.md  session_debug_ui_ux_fix.md  (+5 more)
deploy/: README.md  docker-compose.yml  install.sh
docs/: DOCKERHUB_SETUP.md
scripts/: test-docker-build.sh  test-docker.sh
src/: config.py  kroki_client.py  main.py  routes.py
static/: .gitkeep
templates/: base.html  index.html
tests/: test_config.py  test_excalidraw_fix.py  test_integration.py  test_kroki_client.py  test_main.py  test_routes.py
